--- a/app/src/main/res/layout/room.xml
+++ b/app/src/main/res/layout/room.xml
@@ -15,8 +15,178 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/edittext"
+        android:layout_marginTop="20dp">
+        <Button
+            android:id="@+id/RoomInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="룸 정보"
+            android:layout_marginLeft="10dp" />
+        <Button
+            android:id="@+id/Schedule"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="스케줄"
+            android:layout_marginLeft="10dp" />
+        <Button
+            android:id="@+id/RoomNotice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="게시판"
+            android:layout_marginLeft="10dp" />
+        <Button
+            android:id="@+id/RoomChat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="채팅방"
+            android:layout_marginLeft="10dp" />
 
     </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="300dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/border"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="140dp"
+                    android:gravity="center_horizontal"
+                    android:text="컴퓨터알고리즘 스터디방 설명칸"
+                    android:textSize="20dp" />
+            </LinearLayout>
+            <Button
+                android:id="@+id/JoinBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="입장"
+                android:background="@drawable/join_button_border"
+                android:layout_marginLeft="160dp"
+                android:layout_marginTop="30dp"/>
+            <TableLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="#999999"
+                android:stretchColumns="*"
+                android:layout_marginTop="10dp">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="60dp"
+                        android:text="No."
+                        android:textSize="20dp"
+                        android:background="#666666"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="60dp"
+                        android:text="Name"
+                        android:textSize="20dp"
+                        android:background="#666666"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="60dp"
+                        android:text="학번"
+                        android:textSize="20dp"
+                        android:background="#666666"/>
+
+                </TableRow>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:background="#40E0D0"/>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:paddingLeft="60dp"
+                        android:text="No."
+                        android:textSize="20dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:paddingLeft="60dp"
+                        android:text="Name"
+                        android:textSize="20dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:paddingLeft="60dp"
+                        android:text="학번"
+                        android:textSize="20dp"
+                        />
+
+                </TableRow>
+
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:paddingLeft="60dp"
+                        android:text="No."
+                        android:textSize="20dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:paddingLeft="60dp"
+                        android:text="Name"
+                        android:textSize="20dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:paddingLeft="60dp"
+                        android:text="학번"
+                        android:textSize="20dp"
+                        />
+
+                </TableRow>
+            </TableLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 </LinearLayout>
