--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,24 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/split2"
     android:orientation="vertical"
+
     tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/title"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/title"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/split_txt" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
             android:id="@+id/school_icon"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/school"
-            android:layout_marginHorizontal="90dp"/>
+            android:layout_marginHorizontal="90dp"
+            android:src="@drawable/school" />
 
         <EditText
             android:id="@+id/school_text"
@@ -76,7 +80,6 @@
             android:backgroundTint="#606060"
             android:text="로그인" />
     </RelativeLayout>
-
 
 
 </LinearLayout>
