--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,8 +13,7 @@
         android:id="@+id/title"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/split_txt" />
+        android:layout_gravity="center_horizontal" />
 
     <RelativeLayout
         android:layout_width="match_parent"
