--- a/app/src/main/res/layout/room.xml
+++ b/app/src/main/res/layout/room.xml
@@ -25,7 +25,7 @@
             android:text="룸 정보"
             android:layout_marginLeft="10dp" />
         <Button
-            android:id="@+id/Schedule"
+            android:id="@+id/ScheduleBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="스케줄"
