--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -36,7 +36,7 @@
             android:layout_height="50dp"
             android:layout_below="@+id/school_icon"
             android:layout_marginHorizontal="90dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/user" />
 
         <EditText
@@ -45,7 +45,7 @@
             android:layout_height="50dp"
             android:layout_below="@+id/text_school"
             android:layout_marginHorizontal="150dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/edittext" />
 
         <ImageView
@@ -54,27 +54,37 @@
             android:layout_height="50dp"
             android:layout_below="@+id/user_icon"
             android:layout_marginHorizontal="90dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/key" />
 
         <EditText
-            android:id="@+id/text_key"
+            android:id="@+id/text_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/text_user"
             android:layout_marginHorizontal="150dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/edittext" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/text_key"
+            android:layout_below="@+id/text_password"
             android:layout_marginHorizontal="150dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:backgroundTint="#606060"
             android:text="로그인" />
+
+        <Button
+            android:id="@+id/btn_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_login"
+            android:layout_marginHorizontal="150dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#606060"
+            android:text="회원가입" />
     </RelativeLayout>
 
 
