--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -6,79 +6,92 @@
     android:layout_height="match_parent"
     android:background="@drawable/split2"
     android:orientation="vertical"
-
     tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/title"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/title" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/school_icon"
+            android:id="@+id/icon_school"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="90dp"
             android:src="@drawable/school" />
 
         <EditText
-            android:id="@+id/school_text"
+            android:id="@+id/text_school"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="150dp"
-            android:background="@drawable/edittext" />
+            android:background="@drawable/edittext"
+            android:hint="school" />
 
         <ImageView
-            android:id="@+id/user_icon"
+            android:id="@+id/icon_user"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_below="@+id/school_icon"
+            android:layout_below="@+id/icon_school"
             android:layout_marginHorizontal="90dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/user" />
 
         <EditText
-            android:id="@+id/user_text"
+            android:id="@+id/text_user"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@+id/school_text"
+            android:layout_below="@+id/text_school"
             android:layout_marginHorizontal="150dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/edittext" />
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edittext"
+            android:hint="user" />
 
         <ImageView
-            android:id="@+id/key_icon"
+            android:id="@+id/icon_password"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_below="@+id/user_icon"
+            android:layout_below="@+id/icon_user"
             android:layout_marginHorizontal="90dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/key" />
 
         <EditText
-            android:id="@+id/key_text"
+            android:id="@+id/text_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@+id/user_text"
+            android:layout_below="@+id/text_user"
             android:layout_marginHorizontal="150dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/edittext" />
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edittext"
+            android:hint="password" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/key_text"
+            android:layout_below="@+id/text_password"
             android:layout_marginHorizontal="150dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:backgroundTint="#606060"
             android:text="로그인" />
-    </RelativeLayout>
 
+        <Button
+            android:id="@+id/btn_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btn_login"
+            android:layout_marginHorizontal="150dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#606060"
+            android:text="회원가입" />
+
+    </RelativeLayout>
 
 </LinearLayout>
