--- a/app/src/main/res/drawable/join_button_border.xml
+++ b/app/src/main/res/drawable/join_button_border.xml
@@ -6,7 +6,7 @@
         android:right="5dp"
         android:top="5dp">
         <shape android:shape="rectangle">
-            <solid android:color="#00FF00"/>
+            <solid android:color="#FFFFFF"/>
             <corners
                 android:topRightRadius="50dp"
                 android:topLeftRadius="50dp"
