--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -1,38 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="사용자 정보"
-        android:textSize="20dp"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:background="@color/black"
-        />
 
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="내정보"
+        android:background=""
+                />
+
+    <ImageView
+    android:id="@+id/imageView"
+    android:layout_width="101dp"
+    android:layout_height="141dp"
+    app:srcCompat="@drawable/user" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이름 : "
-            android:textSize="20dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:text="이름 : "
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/infoName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text=""
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"/>
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -40,20 +47,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="학과 : "
-            android:textSize="20dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:text="학과 : "
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/infoDepartment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text=""
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"/>
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -61,20 +70,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="학년 : "
-            android:textSize="20dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:text="학년 : "
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/infoGrade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text=""
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"/>
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -82,20 +93,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="관심분야 : "
-            android:textSize="20dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:text="관심분야 : "
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/infoInterest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text=""
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"/>
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -103,20 +116,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="희망 시간대 : "
-            android:textSize="20dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:text="희망 시간대 : "
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/infoTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text=""
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"/>
+            android:textSize="20dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -124,29 +139,31 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="희망 장소 : "
-            android:textSize="20dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:text="희망 장소 : "
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/infoPlace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text=""
-            android:textSize="20dp"
-            android:layout_marginTop="30dp"/>
+            android:textSize="20dp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/okBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="확인"
         android:layout_marginLeft="160dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/join_button_border"/>
+        android:background="@drawable/join_button_border"
+        android:text="확인" />
 
 </LinearLayout>
