--- a/app/src/main/res/layout/realmain.xml
+++ b/app/src/main/res/layout/realmain.xml
@@ -1,6 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/mainreal">
+
+    <ImageView
+        android:id="@+id/my"
+        android:layout_width="105dp"
+        android:layout_height="124dp"
+        app:srcCompat="@drawable/my"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="344dp" />
+
+    <ImageView
+        android:id="@+id/myserch"
+        android:layout_width="100dp"
+        android:layout_height="111dp"
+        app:srcCompat="@drawable/serch"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="344dp" />
+
+    <ImageView
+        android:id="@+id/mywrite"
+        android:layout_width="115dp"
+        android:layout_height="109dp"
+        app:srcCompat="@drawable/write"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="359dp" />
+
+    <ImageView
+        android:id="@+id/myon"
+        android:layout_width="99dp"
+        android:layout_height="81dp"
+        app:srcCompat="@drawable/onoff"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="314dp"
+        tools:layout_editor_absoluteY="13dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
