--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/split3"
+    android:background="@drawable/split2"
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
@@ -13,7 +13,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_gravity="center_horizontal"
-         />
+        android:src="@drawable/title" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -32,8 +32,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="150dp"
             android:background="@drawable/edittext"
-            android:hint="   대학교"
-            />
+            android:hint="school" />
 
         <ImageView
             android:id="@+id/icon_user"
@@ -46,13 +45,13 @@
 
         <EditText
             android:id="@+id/text_user"
-            android:layout_width="156dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/text_school"
             android:layout_marginHorizontal="150dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/edittext"
-            android:hint="  학번" />
+            android:hint="user" />
 
         <ImageView
             android:id="@+id/icon_password"
@@ -65,34 +64,32 @@
 
         <EditText
             android:id="@+id/text_password"
-            android:layout_width="1000dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/text_user"
             android:layout_marginHorizontal="150dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/edittext"
-            android:hint="  비밀번호" />
+            android:hint="password" />
 
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_password"
             android:layout_marginHorizontal="150dp"
             android:layout_marginTop="40dp"
-            android:backgroundTint="#FF82AA"
-            android:background="@drawable/round"
+            android:backgroundTint="#606060"
             android:text="로그인" />
 
         <Button
             android:id="@+id/btn_signup"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_login"
             android:layout_marginHorizontal="150dp"
             android:layout_marginTop="10dp"
-            android:backgroundTint="#F3CEFB"
-            android:background="@drawable/round"
+            android:backgroundTint="#606060"
             android:text="회원가입" />
 
     </RelativeLayout>
