--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text=""
+            android:text="최지원"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text=""
+            android:text="컴퓨터공학과"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text=""
+            android:text="3학년"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text=""
+            android:text="모바일프로그래밍"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -135,7 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text=""
+            android:text="9교시 이후"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -158,7 +158,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text=""
+            android:text="학교앞 카페"
             android:textSize="20dp" />
     </LinearLayout>
 
