--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical"
         android:layout_marginTop="50dp">
 
-        <Spinner
+        <EditText
             android:id="@+id/text_school"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
