--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,7 +127,7 @@
 
 
                     <TextView
-                        android:id="@+id/txt"
+                        android:id="@+id/form"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="스터디 형태      " />
