--- a/app/src/main/res/layout/realmain.xml
+++ b/app/src/main/res/layout/realmain.xml
@@ -1,45 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/mainreal">
 
-    <ImageView
-        android:id="@+id/my"
-        android:layout_width="105dp"
-        android:layout_height="124dp"
-        app:srcCompat="@drawable/my"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="344dp" />
+    <Button
+        android:id="@+id/onoffBtn"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/onoff"
+        android:layout_gravity="right"/>
 
-    <ImageView
-        android:id="@+id/myserch"
-        android:layout_width="100dp"
-        android:layout_height="111dp"
-        app:srcCompat="@drawable/serch"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="344dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="330dp">
 
-    <ImageView
-        android:id="@+id/mywrite"
-        android:layout_width="115dp"
-        android:layout_height="109dp"
-        app:srcCompat="@drawable/write"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="359dp" />
+        <Button
+            android:id="@+id/searchBtn"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/serch"
+            android:layout_marginLeft="40dp"/>
+        <Button
+            android:id="@+id/myNoticeBtn"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/write"
+            android:layout_marginLeft="20dp"/>
+        <Button
+            android:id="@+id/myInfoBtn"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/my"
+            android:layout_marginLeft="20dp"/>
 
-    <ImageView
-        android:id="@+id/myon"
-        android:layout_width="99dp"
-        android:layout_height="81dp"
-        app:srcCompat="@drawable/onoff"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="314dp"
-        tools:layout_editor_absoluteY="13dp" />
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
