--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -3,21 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-
-    <Button
-        android:id="@+id/btn_pass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/round"
-        android:text="로그인"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+    android:orientation="vertical"
+    android:background="@drawable/split2">
 
     <ImageView
         android:id="@+id/imageView"
@@ -167,7 +154,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="160dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/join_button_border"
         android:text="확인" />
 
