--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/split2">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,21 +13,34 @@
 
         <Button
             android:id="@+id/infoBtn"
-            android:layout_width="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/user"
+            android:backgroundTint="@color/black" />
+        <Button
+            android:id="@+id/SettingBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/settings"
+            android:layout_marginLeft="10dp"/>
+
+
+        <TextView
+            android:layout_width="140dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/user"
-            android:backgroundTint="@color/black" />
-
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="10dp"
             android:text="Smash"
-            android:textSize="40dp"
-            />
+            android:textSize="40dp" />
+
+        <Button
+            android:id="@+id/logoutBtn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="80dp"
+            android:background="@drawable/on_off_button"/>
     </LinearLayout>
 
     <LinearLayout
@@ -41,10 +55,17 @@
             android:layout_marginTop="20dp"
             android:background="@android:drawable/ic_menu_search" />
         <EditText
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/edittext"/>
+        <Button
+            android:id="@+id/makeRoomBtn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/add"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"/>
 
     </LinearLayout>
 
@@ -267,9 +288,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
-
     </ScrollView>
-
 
 </LinearLayout>
