--- a/app/src/main/res/layout/realmain.xml
+++ b/app/src/main/res/layout/realmain.xml
@@ -11,7 +11,7 @@
         android:id="@+id/onoffBtn"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background="@drawable/onoff"
+        android:background="@drawable/on_off_button"
         android:layout_gravity="right"/>
 
     <LinearLayout
